lots of changes

--- a/resume2/resume2.html
+++ b/resume2/resume2.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>resumeWebsite</title>
-	<link rel="stylesheet" type="text/css" href="resumeStyling.css">
+	<title>resume2</title>
+	<link rel="stylesheet" type="text/css" href="resume2Style.css">
+	
 </head>
 <body>
 	<h1>Caleb Chang</h1>
@@ -18,8 +19,9 @@
 
 	<br>
 
-	<h2>Education</h2>
-	<hr/>
+	<button class="button">
+		<h2>Education</h2>
+	</button>
 	<section>
 		<div class="textGrid">
 			<b class="alignLeft">Queens College of The City University of New York</b>
@@ -46,10 +48,9 @@
 		</div>
 	</section>
 
-	<br>
-
-	<h2>Projects</h2>
-	<hr/>
+	<button class="button">
+		<h2>Projects</h2>
+	</button>
 	<section>
 		<b class="alignLeft">College Course Assignments</b>
 		<div class="textGrid">
@@ -90,10 +91,9 @@
 		</div>
 	</section>
 
-	<br>
-
-	<h2>Volunteer Experience</h2>
-	<hr/>
+	<button class="button">
+		<h2>Volunteer Experience</h2>
+	</button>
 	<section>
 		<div class="textGrid">
 			<b class="alignLeft">TechTogether Hackathon</b>
@@ -110,10 +110,9 @@
 		<div style="height: 1em"></div>
 	</section>
 
-	<br>
-
-	<h2>Work Experience</h2>
-	<hr/>
+	<button class="button">
+		<h2>Work Experience</h2>
+	</button>
 	<section>
 		<div class="textGrid">
 			<b class="alignLeft">Popeyes</b>
@@ -139,8 +138,10 @@
 		</ul>
 
 	</section>
-	<h2>Skills</h2>
-	<hr/>
+
+	<button class="button">
+		<h2>Skills</h2>
+	</button>
 	<section>
 		<p><b>Computer Languages:</b> Java, C++, CSS, HTML</p>
 		<p><b>Languages:</b> English, Mandarin</p>
@@ -148,5 +149,4 @@
 </body>
 </html>
 
-
-
+<script type="text/javascript" src="resume2Script.js"></script>
