--- a/weather/weather.html
+++ b/weather/weather.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<title>test</title>
-		<link rel="stylesheet" type="text/css" href="testStyle.css">
+		<link rel="stylesheet" type="text/css" href="weatherStyle.css">
 	</head>
 
 	<body>
@@ -19,5 +19,5 @@
 
 </html>
 
-<script type="text/javascript" src="testScript.js"></script>
+<script type="text/javascript" src="weatherScript.js"></script>
 <script type="text/javascript" src="skycons.js"></script>
