--- a/test/test.html
+++ b/test/test.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
 <html>
-
-	<head>
-		<title>test</title>
-		<link rel="stylesheet" type="text/css" href="testStyle.css">
-	</head>
-
-	<body>
-		<h1 id="y"></h1>
-		<div class="flex">
-			<h1 id="h1"></h1>
-			<div class="container">
-				<canvas id="icon1" width="128" height="128"></canvas>
-			</div>
-		</div>
-		<h2 id="h2"></h2>
-	</body>
-
+<head>
+	<title>test</title>
+	<link rel="stylesheet" type="text/css" href="testStyle.css">
+</head>
+<body id="body">
+	<div id="container">
+		<h1 id="first">test</h1>
+		<h1 id="two">glopa</h1>
+	</div>
+</body>
 </html>
 
 <script type="text/javascript" src="testScript.js"></script>
-<script type="text/javascript" src="skycons.js"></script>
