--- a/weather/weather.html
+++ b/weather/weather.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>test</title>
+		<title>weather</title>
 		<link rel="stylesheet" type="text/css" href="weatherStyle.css">
 	</head>
 
@@ -14,7 +14,7 @@
 				<canvas id="icon1" width="128" height="128"></canvas>
 			</div>
 		</div>
-		<h2 id="h2"></h2>
+		<h2 id="h2" onclick="swapFC()"></h2>
 	</body>
 
 </html>
