--- a/JQuery/jquery.html
+++ b/JQuery/jquery.html
@@ -4,23 +4,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <style>
-      #circle {
-        border-radius: 50%;
-        background-color: green;
-        width: 150px;
-        height: 150px;
-        margin: 10px;
-      }
     </style>
   </head>
   <body>
     <div id="circle"></div>
     <p>this is some text</p>
+    <form id="myForm">
+      <input type="text" name="username">
+      <button>click me</button>
+    </form>
 
     <script type="text/javascript">
-      $("#circle").click(function() {
-        alert("circle was clicked");
-      });
+      $('#myForm').submit(function(e){
+
+      })
     </script>
   </body>
 </html>
